[package]
edition = "2018"
name = "rusb"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = {version = "1.7.9", features = ["napi4", "serde-json"]}
napi-derive = "1"
rusb = "0.9"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
napi-build = "1"

[profile.release]
lto = true
